# WhisperDesktopNG

./: .gitignore  GEMINI.md  Readme.md  Tasks_2025-06-27T04-46-26.md  Tasks_2025-06-27T04-52-54.md  WhisperCpp.sln  build_and_sync.ps1  debug_output.txt
.github/ISSUE_TEMPLATE/: help-wanted.md
ComputeShaders/: ComputeShaders.vcxproj  dequantizeQ4_0.hlsl  dequantizeQ5_1.hlsl  dequantizeQ8_0.hlsl  ggmlQuantization.hlsli
Docs/documentation_standards/: git_commit_standards.md  git_operations_summary.md
Docs/implementation/: 03_Debug构建配置修复实施总结.md  07_行动计划G：架构简化与路径统一.md  08_行动计划H_绞杀者重构模式_实施记录.md  09_行动计划I：交互式断点调试验证.md  10_行动计划J执行记录.md  10_行动计划J：终极验证 - 隔离最终变量.md  11_project_completion_summary.md  11_whisper_cpp_integration_test_results.md  11_whisper_cpp_pcm_transcription_success.md  11_whisper_cpp_pcm_usage_guide.md  11_行动计划K_音频管道移植手术_开发记录.md  12_产品化集成实施记录.md  12_最终行动计划：产品化集成.md  13_main.exe转录失败根本修复计划.md  13_关键问题总结_main.exe转录失败.md  14_WhisperDesktopNG_PCM直通路径修复实施记录.md  15_WhisperDesktopNG：核心功能根本修复与架构优化方案v1_1.md  15_WhisperDesktopNG：核心功能根本修复与架构优化方案v1_2.md  16_2核心功能修复实施记录_阶段3最终发现.md  16_3核心功能修复最终总结.md  16_4最终实施状态报告.md  17_2WhisperDesktopNG核心功能修复完整方案与问题根因分析.md  18_最终修复方案与官方工具对比分析.md  19_WhisperDesktopNG：核心功能根本修复与架构优化方案v1.7.md  19_whisper_cpp_integration_final_report.md  CWhisperEngine_EncodeDecodeRefactoring_Summary.md  CWhisperEngine_Implementation_Summary.md  CWhisperEngine_ManualSampling_Implementation_Report.md  Phase0_01_expert_guidance_implementation_summary.md  Phase0_02_current_development_status_and_handover.md  Phase0_02_immediate_action_plan.md  Phase0_Quantization_Spike_Task_List.md  WhisperCppEncoder_Dependency_Injection_Implementation.md  WhisperCppEncoder_Implementation_Summary.md  WhisperDesktopNG_项目结构分析报告.md  WhisperDesktopNG项目现状分析报告v1.md  WhisperDesktopNG项目现状分析报告v2.md  aigc_prompts.md  architectural_analysis_report.md  (+10 more)
GGML/: GGML.vcxproj  GGML.vcxproj.filters  whisper.cpp  whisper.h
Scripts/: README.md  USAGE.md  simple_test.ps1  test_whisper_cpp.bat  test_whisper_cpp_pcm.ps1
Spike/QuantizationSpike/: CMakeLists.txt  CMakeLists_WhisperCpp.txt  MinimalGGMLParser.h  QuantizationSpike.h  WhisperModel.cpp  WhisperModel.h  main.cpp  test_whisper_model.cpp
Tests/: BuildVerificationTest.md  CWhisperEngine_EncodeDecodeTest.cpp  README.md  SimpleTest.ps1  batch_transcription_test_with_naming.ps1  build_encode_decode_test.ps1  build_minimal_test.bat  comprehensive_transcription_test.ps1  minimal_whisper_test.cpp  run_simple_test.bat  simple_test.cpp  simple_whisper_test.cpp  test_engine.cpp  test_engine_new.cpp  test_output.txt  timestamp_debug_test.ps1  transcription_test_log.txt
Tools/: debug_probs_checker.cpp
Whisper/: CWhisperEngine.cpp  CWhisperEngine.h  CWhisperEngineNew.cpp  CWhisperEngineNew.h  ContextImpl.capture.cpp  ContextImpl.cpp  ContextImpl.h  ContextImpl.misc.cpp  DecoderInputBuffers.cpp  DecoderInputBuffers.h  DecoderResultBuffer.cpp  DecoderResultBuffer.h  DirectComputeEncoder.cpp  DirectComputeEncoder.h  KeyValueBuffers.cpp  KeyValueBuffers.h  Languages.cpp  Languages.h  MelInputTensor.cpp  MelInputTensor.h  MelStreamer.cpp  MelStreamer.h  ModelBuffers.clone.cpp  ModelBuffers.h  ModelImpl.cpp  ModelImpl.h  Spectrogram.cpp  TranscribeResult.h  Vocabulary.cpp  Vocabulary.h  Whisper.vcxproj  WhisperContext.cpp  WhisperContext.h  WhisperCppEncoder.cpp  WhisperCppEncoder.cpp.backup  WhisperCppEncoder.h  WhisperCppEncoder.h.backup  WhisperModel.cpp  WhisperModel.h  iWhisperEncoder.h  (+5 more)
(+248 files in other folders)
